--- a/style.less
+++ b/style.less
@@ -73,7 +73,7 @@ body {
 	background: transparent;
 }
 #colorWheel {
-	-webkit-animation: fadein 2s;
+	-webkit-animation: fadein 3s;
 	height: 100px;
 	width: 100px;
 	margin: 0 auto ;
@@ -164,6 +164,7 @@ body {
 	cursor: pointer;
 	margin-top: 100%;
 	z-index: 100;
+	border: 2px solid rgb(96, 170, 243);
 }
 
 .regenerate:hover{
