regen color corrected

--- a/style.less
+++ b/style.less
@@ -6,7 +6,7 @@
 @blue-green: rgb(0, 183, 255);
 @green: green;
 @yellow-green: rgb(145, 255, 0);
-@yellow: yellow;
+@yellow: rgb(255, 255, 0);
 @yellow-orange: rgb(255, 196, 0);
 @orange: rgb(253, 169, 0);
 @red-orange: rgb(255, 72, 0);
