--- a/style.less
+++ b/style.less
@@ -8,8 +8,8 @@
 @yellow-green: rgb(145, 255, 0);
 @yellow: rgb(255, 255, 0);
 @yellow-orange: rgb(255, 196, 0);
-@orange: rgb(253, 169, 0);
-@red-orange: rgb(255, 72, 0);
+@orange: rgb(253, 101, 0);
+@red-orange: rgb(255, 51, 0);
 @font-face {
 	font-family: "Gotham-Medium";
 	src: url('./fonts/Gotham-Medium.otf') format('opentype');
@@ -73,7 +73,8 @@ body {
 	background: transparent;
 	zoom: 2;
     -moz-transform: scale(2);
-    -moz-transform-origin: 0 0;
+	-moz-transform-origin: 0 0;
+	overflow: hidden;
 }
 #colorWheel {
 	-webkit-animation: fadein 3s;
@@ -167,6 +168,7 @@ body {
 	cursor: pointer;
 	margin-top: 100%;
 	z-index: 100;
+	font-size: 10px;
 }
 
 .regenerate:hover{
@@ -183,3 +185,20 @@ body {
 span{
 	transition: border-color 1.5s;
 }
+
+.title{
+	font-family: "Gotham-Book", Helvetica, Arial, serif;
+	color: rgb(0, 128, 255);
+	text-align: center;
+	margin-top: -5%;
+	margin-bottom: 5%;
+}
+
+.main-text{
+	font-family: "Gotham-Book", Helvetica, Arial, serif;
+	color: rgb(0, 128, 255);
+	text-align: center;
+	margin-top: -5%;
+	margin-bottom: 5%;
+}
+
